--- a/src/app/features/shared/layout/components/layout/layout.component.html
+++ b/src/app/features/shared/layout/components/layout/layout.component.html
@@ -5,6 +5,8 @@
 </mat-toolbar>
 <mat-drawer-container class="container">
   <mat-drawer-content>
-    <ng-content></ng-content>
+    <mat-card>
+      <ng-content></ng-content>
+    </mat-card>
   </mat-drawer-content>
 </mat-drawer-container>
