--- a/src/app/features/shared/layout/components/layout/layout.component.html
+++ b/src/app/features/shared/layout/components/layout/layout.component.html
@@ -8,5 +8,6 @@
     <mat-card>
       <ng-content></ng-content>
     </mat-card>
+    <ng-content select="[fabButton]"></ng-content>
   </mat-drawer-content>
 </mat-drawer-container>
