--- a/src/app/features/shared/layout/components/layout/layout.component.scss
+++ b/src/app/features/shared/layout/components/layout/layout.component.scss
@@ -2,16 +2,25 @@
   min-height: 90vh;
 }
 
-mat-toolbar {
+.toolbar__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  width: min(1024px, 100%);
+  margin: 0 auto;
 }
 
 mat-card {
-  width: min(500px, 82vw);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  row-gap: 1em;
+  width: 80%;
+  max-width: 450px;
   margin: min(10vh, 2em) auto 0;
 }
 
 mat-drawer-content {
-  min-height: 90vh;
+  min-height: 95vh;
 }
